--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Michael Angarola">
     <meta name="author" content="Michael Angarola">
     <link href="https://fonts.googleapis.com/css?family=Karla|Ubuntu+Condensed" rel="stylesheet">
-    <link rel="icon" href="/Users/michaelangarola/Desktop/Personal Site/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <script src="https://use.fontawesome.com/6b351ce5e4.js"></script>
-    <link rel="stylesheet" type="text/css" href="/Users/michaelangarola/Desktop/Personal Site/Styles/site.css">
+    <link rel="stylesheet" type="text/css" href="Styles/site.css">
      <!--coded by hand, no bootstrap-->
     <title>Michael Angarola</title>
   </head>
@@ -42,8 +42,8 @@
 </div>
 <script type="text/ng-template" id="/templates/portfolio.html">
 <div class="main-portfolio">
-  <a href="healswift.azurewebsites.net"> <img src="/Users/michaelangarola/Desktop/Personal Site/Images/HealSwiftLogo.png"></a>
-  <a href="cristinaangarola.com"><img id="casimg" src="/Users/michaelangarola/Desktop/Personal Site/Images/cashowroomLogo.png"></a>
+  <a href="healswift.azurewebsites.net"> <img src="Images/HealSwiftLogo.png"></a>
+  <a href="cristinaangarola.com"><img id="casimg" src="Images/cashowroomLogo.png"></a>
 </div>
 </script>
 
@@ -56,9 +56,9 @@
 </div>
 </script>
 
-<script src="/Users/michaelangarola/Desktop/Personal Site/Scripts/vendor/jquery.js"></script>
+<script src="Scripts/vendor/jquery.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-<script src="/Users/michaelangarola/Desktop/Personal Site/Scripts/vendor/angular-route.min.js"></script>
+<script src="Scripts/vendor/angular-route.min.js"></script>
 <script type="text/javascript">
   (function () {
             "use strict";
