--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="main" ng-controller="mainController">
   <div class="header">
-    <a href="#/"><span class="header-name">Michael Aidan Angarola</span><a>
+    <a href="#/"><span class="header-name">Michael Aidan Angarola</span></a>
   </div>
 
 <div class="header-links">
@@ -42,8 +42,9 @@
 </div>
 <script type="text/ng-template" id="/templates/portfolio.html">
 <div class="main-portfolio">
-  <a href="healswift.azurewebsites.net"> <img src="Images/HealSwiftLogo.png"></a>
-  <a href="cristinaangarola.com"><img id="casimg" src="Images/cashowroomLogo.png"></a>
+  <a href="http://healswift.azurewebsites.net"> <img src="Images/HealSwiftLogo.png"></a>
+  <a href="http://cristinaangarola.com"><img id="casimg" src="Images/cashowroomLogo.png"></a>
+  <a href="http://www.ginnywongshowroom.com"><img id="gwimg" src="Images/ginnywongLogo.jpeg"></a>
 </div>
 </script>
 
